# TMA4280LABS

./: .gitignore  Makefile
lab1/mach2/: main.c
lab1/reduc/: main.c
lab1/zeta1/: Makefile  main.c
lab2/code-parallel/: CMakeLists.txt  list.c  list.h  poisson.c  transpose.c  transpose.h
lille/: Makefile
mach0/: Makefile  mach0  mach0.c  main.c  makefile  test-unit.sh
mach1/: Makefile  mach1  mach1.c  main.c  makefile
mach2/: Makefile  main.c
p1/: .gitignore  Makefile
p1/zeta2/: Makefile  lille.c
p2/: CMakeLists.txt  list.h  poisson.c  transpose.h
p2/jobs/: job_p16-t01.sh  job_p16-t02.sh  job_p18-t02.sh  job_p26-t01.sh  job_p36-t01.sh
p2/jobs/results/: poisson_p16-t01.e30031  poisson_p16-t01.o30031  poisson_p16-t02.e30032  poisson_p16-t02.o30032  poisson_p18-t02.e30033  poisson_p18-t02.o30033  poisson_p26-t01.e30034  poisson_p26-t01.o30034  poisson_p36-t01.e30035  poisson_p36-t01.o30035
p2/serial/: poisson.c
reduc/: Makefile  main.c
zeta0/: Makefile  main.c  makefile  test-unit.sh  zeta0  zeta0.c
zeta1/: Makefile  main.c  makefile  zeta1  zeta1.c
zeta2/: Makefile  main.c
